--- a/style.css
+++ b/style.css
@@ -8,36 +8,41 @@
 .header-top{
   border: 30px solid  #00aeff;
 }
+.section1-container{
+  background-image: url(./Assests/images/img1.jpg); 
+  width: 100%;
+  height: 300px;
+  background-size: cover;
+  background-position: center;
+  position: relative;top: -78px;
+}
 .top-text{
   position: relative;bottom: 52px;
   padding-left: 3.9%;
   font-size: 33px;
   color: #fff;
-  
 }
 
 /* <!-- section 2 --> */
-
-.section1-container img{
-  width: 100%;
-  height: 70%;
-  position: relative;bottom: 38px;
-}
 .section1-text{
-  position: relative;bottom: 220px;
   color: #fff;
   font-size: 17.7px;
   text-align: center;
+  position: relative;top: 90px;
 }
 .form{
-  background: white;
+  background: rgba(255, 255, 255, 0.822);
   width: 70%;
-  padding: 37px;
+  padding: 40px;
   font-size: 1.5rem;
-  height: unset;
-  position: relative;left: 11%; bottom: 160px;
-  border: 1px solid rgb(158, 156, 156);
-  
+  margin: 0 auto 0 auto;
+ margin-top: -150px;
+ box-shadow: 0px 0px 10px 0px;
+ z-index: 5;
+ position: sticky;
+ top: -20px;
+ margin-bottom: 102px;
+ 
 }
 .input1{
     background-color: white;
@@ -67,7 +72,8 @@
 }
 .section2-header{
   text-align: center;
-  position: relative;bottom: 70px;
+  position: relative;
+  bottom: 0px;
   
 }
 .section2-header h3{
@@ -141,7 +147,7 @@
     height: 40%;
     position: relative;
     border-top: 0;
-    margin: 10px; 
+    margin: 10px;
 }
 .images1 h3{
   margin: 15px;
@@ -256,3 +262,186 @@ width: 13%;
   margin: 10px;
 
   }
+  .capital{
+    display: flex;
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 30px;
+    padding-bottom: 60px;
+ }
+  .capital div{
+    margin: 10px;
+    font-size: 14px;
+    text-align: left;
+    padding: 30px;
+    
+  }
+  .capital div h3{
+    color: #00aeff;
+    margin: 10px;
+  }
+  .capital div p{
+    font-size: 14px;
+    margin: 10px;
+  }
+  .plane{
+    padding: 200px;
+    display: flex;
+  }
+  .plane2{
+    width: 100%;
+    padding: 10% 5% 10% 10%;
+    bottom: 0;
+  }
+  .plane2 h2{
+    color: #2196F3;
+    font-size: 70px;
+    font-size: calc(30px + 30 * (100vw - 1000px)/ 400);
+  }
+  .plane2 h3{
+    font-size: calc(20px + 10 * (100vw - 1000px)/ 400);
+    font-weight: 800;
+    color: #4f4f4f;
+     margin-top: 0;
+  }
+  .plane2 p{
+    margin: 1% 0 5%;
+    color: #4f4f4f;
+    font-weight: 500;
+    text-align: left;
+    font-size: 18px;
+}
+.hausa{
+  position: relative;left: 80%;
+  position: relative;bottom: 113px;
+  color: #ffff;
+  font-size: 20px;
+}
+.skull{
+  position: relative;bottom: 113px;
+  color: #ffff;
+}
+.press-links{
+  display: flex;
+  padding: 20px;
+  margin-left: 13%;
+}
+.press-links{
+  list-style-type: none;
+}
+.last{
+  margin: 43px;
+}
+.skull img{
+  position: absolute;
+  top: -6px;
+  left: -17px;
+  height: 38px;
+  width: 38px;
+  border-radius: 50%; 
+}
+.skull p{
+ 
+  font-size: 20px;
+  position: relative;bottom: 113px;
+}
+.cann{
+  border: 6px solid #084482;
+  width: 190px;
+  position: relative;left: 60%;
+  position: relative;bottom: 85px;
+  border-radius: 20px;
+  text-align: center;
+
+}
+.cann img{
+  position: absolute;
+    top: -6px;
+    left: -17px;
+    height: 38px;
+    width: 38px;
+    border-radius: 50%;
+}
+.cann p{
+ font-size: 8px;
+ background-color: #084482;
+ color: #00aeff;
+ text-align: top;
+}
+.cann h5{
+  font-size: 16px;
+ background-color: #084482;
+ color: #ffffff;
+}
+  .boohy{
+    background-color: #084482;
+    height: 60px;
+    position: relative;bottom: 190px;
+    padding: 10px;
+    min-height: 95px;
+    margin: 0;
+    color: #fff;
+    display: flex;
+  }
+  .boohy-text{
+  display: flex;
+    padding: 0;
+    text-align: center;
+    margin-left: 17%;
+    margin-top: 27px;
+  }
+  .boohy-text p{
+     color: #00aeff;
+     margin: 10px 70px 0 0;
+  }
+  .subscribeform{
+    display: flex;
+    padding-left: 40px;
+    margin-top: 27px;
+  }
+  .subscribeform button{
+    width: 40%;
+   padding: 13px;
+   border-radius: 0 5px 5px 0;
+    color: #fff;
+    background-color: #00aeff;
+  }
+  .subscribeform input{
+    width: 390px;
+    border-radius: 5px 0 0 5px;
+  }
+  .top-footer {
+    padding: 30px 15px;
+    display: flex;
+    font-size: 14.3px;
+    padding-left: 23%;
+    position: relative;bottom: 80px;
+  }
+.top-footer a{
+  color: #00aeff;
+  text-decoration: none;
+}
+.container{
+  width: 1050px;
+}
+.company{
+  width: 20%;
+    margin-left: 0;
+}
+.community{
+  width: 20%;
+    margin-right: 0;
+}
+.key-cities{
+  width: 20%;
+  margin-right: 0;
+}
+.key-attractions{
+  width: 20%;
+  margin-right: 0;
+}
+.key-hotels{
+  width: 20%;
+  margin-right: 0;
+}
