--- a/style.css
+++ b/style.css
@@ -14,7 +14,18 @@
   height: 300px;
   background-size: cover;
   background-position: center;
-  position: relative;top: -78px;
+  position: relative;top: -138.3px;
+}
+.skull{
+  padding-left: 71rem;
+  position: relative;bottom: 144px;
+  display: flex;
+  text-align: center;
+}
+.skull p{
+  margin: 12px;
+ font-size: 14px;
+ color: white;
 }
 .top-text{
   position: relative;bottom: 52px;
@@ -36,7 +47,7 @@
   padding: 40px;
   font-size: 1.5rem;
   margin: 0 auto 0 auto;
- margin-top: -150px;
+ margin-top: -190px;
  box-shadow: 0px 0px 10px 0px;
  z-index: 5;
  position: sticky;
@@ -63,12 +74,15 @@
 }
 .form button{
   color: #fff;
-    background-color: #00aeff;
+  background-color: #00aeff;
     padding: 12px;
     border-radius: 3px;
     margin-left: 5px;
     font-size: 16px;
     width: 13%;
+}
+.button1 :hover{
+ background: turquoise;
 }
 .section2-header{
   text-align: center;
@@ -318,10 +332,6 @@ width: 13%;
   color: #ffff;
   font-size: 20px;
 }
-.skull{
-  position: relative;bottom: 113px;
-  color: #ffff;
-}
 .press-links{
   display: flex;
   padding: 20px;
@@ -333,19 +343,7 @@ width: 13%;
 .last{
   margin: 43px;
 }
-.skull img{
-  position: absolute;
-  top: -6px;
-  left: -17px;
-  height: 38px;
-  width: 38px;
-  border-radius: 50%; 
-}
-.skull p{
- 
-  font-size: 20px;
-  position: relative;bottom: 113px;
-}
+
 .cann{
   border: 6px solid #084482;
   width: 190px;
@@ -444,8 +442,30 @@ width: 13%;
 .key-hotels{
   width: 20%;
   margin-right: 0;
+ 
 }
-.get-app-store{
-  color: #aa12aa;
-  border: 3px solid red;
+.headers{
+  border-bottom: 1px solid slategray;
+  margin-top: 15px;
+  margin-bottom: 16px;
+}
+.ladt{
+  border-bottom: 0.1px solid rgb(153, 153, 153);
+  position: relative;bottom:  55px;left: 20%;
+  width: 83%;
+}
+.footer{
+display: inline-flex;
+padding-left: 19%;
+}
+.footer p{
+ padding: 20px;
+ font-size: 14px;
+ color: dimgrey;
+}
+.certify{
+  padding: 20px;
+ font-size: 16px;
+ color: dimgrey;
+ position: relative;left: 40%;
 }
